Fixed general typo. Hidding pagination on favorites tab
