# backend/api-documentation.yaml
@@ -50,7 +50,7 @@ paths:
             properties:
               error:
                 type: string
-  /currencies/favourites:
+  /currencies/favorites:
     get:
       consumes:
         - application/json
@@ -123,7 +123,7 @@ paths:
             properties:
               error:
                 type: string
-  /currencies/favourites/{id}:
+  /currencies/favorites/{id}:
     delete:
       consumes:
         - application/json
